--- a/gcr/Dockerfile
+++ b/gcr/Dockerfile
@@ -4,16 +4,10 @@ FROM python:3.7-slim
 RUN pip install Flask gunicorn Jinja2 requests Werkzeug lxml httplib2
 
 
-# Copy local code to the container image.
+# Copiamos el codigo a la imagen del contenedor
 WORKDIR /app
 COPY . .
 
-# Service must listen to $PORT environment variable.
-# This default value facilitates local development.
 ENV PORT 8080
 
-# Run the web service on container startup. Here we use the gunicorn
-# webserver, with one worker process and 8 threads.
-# For environments with multiple CPU cores, increase the number of workers
-# to be equal to the cores available.
 CMD exec gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 8 --timeout 0 app:app
