--- a/hola mundo/app.yaml
+++ b/hola mundo/app.yaml
@@ -1,1 +1,16 @@
-runtime: python37
+runtime: python
+env: flex
+entrypoint: gunicorn -b :$PORT main:app
+
+handlers:
+- url: /.*
+  secure: always
+  redirect_http_response_code: 301
+  script: auto
+
+manual_scaling:
+  instances: 2
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
