--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Flask==1.0
 gunicorn==19.7.1
 Jinja2==2.10.1
-requests==2.20.0
 Werkzeug==0.15.3
 lxml==4.5.0
-httplib2==0.17.2
+httplib2==0.18.1
+beautifulsoup4==4.7.1
+requests==2.23.0
+soupsieve==1.8
+urllib3==1.25.9
+html5lib==1.0.1
